--- a/module/string.html
+++ b/module/string.html
@@ -1,6 +1,6 @@
-<h2>${ $['module.string'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>模块 / 字符串</h2>
     <h3 class="question">什么是字符串模块</h3>
     <div class="answer">
       <div>字符串模块是可复用的字符串资源。</div>
@@ -12,15 +12,27 @@
           [dagger-demo] string module</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        <div>上例中，我们通过显示指定模块“string3”的类型为“string”避免自动类型推断规则（将“string3”推断为<a href="module/view">模板模块</a>）生效。</div>
+        <div>上例中，我们通过显示指定模块“string3”的类型为“string”避免自动类型推断规则（将“string3”推断为<a href="module/script">脚本模块</a>）生效。</div>
         <div>任何未指定类型且不匹配<a href="module/introduction">自动推断规则</a>的模块（如上例中的“string2”模块）也将被框架当做字符串模块进行解析。</div>
       </div>
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <template *each="$['module.string.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
+    <h2>Module / String</h2>
+    <h3 class="question">What is the String Module?</h3>
+    <div class="answer">
+      <div>The String Module is a reusable string resource.</div>
+      <div>The "type" of the String Module configuration item is "string".</div>
+      <div>You can access the content of the String Module in the directive expression through the "$module" variable.</div>
+      <div>Let's take a look at an example:
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] string module" src="https://codepen.io/dagger8224/embed/vYdaZwp?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/vYdaZwp">
+          [dagger-demo] string module</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+        <div>In the example above, we specify the type of the "string3" module as "string" to avoid the automatic type inference rule (which would infer "string3" as a <a href="module/script">Script Module</a>) from taking effect.</div>
+        <div>Any module that is not explicitly specified and does not match the <a href="module/introduction">automatic inference rule</a> (such as in the example above, "string2" module) will be parsed as a String Module.</div>
+      </div>
+    </div>
   </template>
 </div>
