--- a/module/namespace.html
+++ b/module/namespace.html
@@ -1,9 +1,10 @@
-<h2>${ $['module.namespace'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>模块 / 名空间</h2>
     <h3 class="question">什么是名空间模块</h3>
     <div class="answer">
-      <div>一个可复用部件（widget）通常由<a href="module/view">模板</a>模块、<a href="module/script">脚本</a>模块和<a href="module/style">样式</a>模块等不同类型的模块共同组成。我们将由若干子模块组合成的复合模块称为名空间模块。名空间模块下可以包含任意类型和数量的子模块，包括其他的名空间模块。</div>
+      <div>一个完整可复用的业务部件通常由<a href="module/view">视图模块</a>、<a href="module/script">脚本模块</a>和<a href="module/style">样式模块</a>等不同类型的模块共同组成。我们将由若干子模块组合成的复合模块称为名空间模块。</div>
+      <div>名空间模块下可以包含任意类型和数量的子模块，包括嵌套定义子级名空间模块。</div>
       <div>名空间模块配置项的“type”值为“namespace”。</div>
       <div>我们来看一个例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module" src="https://codepen.io/dagger8224/embed/GRQBvmw?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
@@ -11,15 +12,10 @@
           [dagger-demo] namespace module</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        上例中，我们注册了一个名为“namespace_module”的名空间模块，您可以通过“namespace_module.view”（名空间“namespace_module”下的视图模块路径）在当前上下文创建名空间实例。下面是该名空间模块资源的内容：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module (resource)" src="https://codepen.io/dagger8224/embed/rNJrzzj?default-tab=html&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/rNJrzzj">
-          [dagger-demo] namespace module (resource)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-        从上面的代码中可以看到，该名空间模块资源由一个名为“template”的模板模块，一个名为“script”的脚本模块，和一个名为“style”的样式模块组成。
+        上例中，我们注册了一个名为“namespace_module”的名空间模块，您可以通过“namespace_module.view”（名空间“namespace_module”下的视图模块路径）创建名空间实例。
+        <div>在当前名空间下，我们还定义了一个名为“scoped_style”的样式模块，该模块的“scoped”字段设置为true，表示该模块只对当前名空间有效。</div>
       </div>
-      <div>如果名空间下模板模块名称为“template”，那么您也可以直接通过名空间路径创建实例，我们来看上例的简写方式：
+      <div>如果名空间下视图模块名称为“view”，那么您也可以直接通过名空间路径创建实例，我们来看上例的简写方式：
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module (shortcut module path)" src="https://codepen.io/dagger8224/embed/qBopaLo?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/qBopaLo">
           [dagger-demo] namespace module (shortcut module path)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
@@ -28,19 +24,45 @@
       </div>
     </div>
     <h3 class="question">名空间模块的配置项字段</h3>
-    <div class="answer">除模块的通用配置项字段外，脚本模块配置项还支持布尔类型的“explicit”字段。当“explicit”为false（默认值）时，不能通过“$module”访问名空间模块及其子级模块内容。您可以指定“explicit”为true将名空间模块暴露给外层名空间。我们来看例子：
+    <div class="answer">除模块的通用配置项字段外，名空间模块配置项还支持布尔类型的“explicit”字段。当“explicit”为false（默认值）时，当前名空间的子级模块内容是对外不可访问的。您可以指定“explicit”为true将名空间模块下的子级<a href="module/script">脚本模块</a>和<a href="module/json">json模块</a>等暴露给外层名空间。我们来看例子：
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module (explicit)" src="https://codepen.io/dagger8224/embed/RwMxGdE?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/RwMxGdE">
         [dagger-demo] namespace module (explicit)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
-      您可以修改上例配置项中“explicit”字段的内容查看对应的执行结果。
     </div>
   </template>
   <template *exist="language === 'enUS'">
-    <template *each="$['module.namespace.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
+    <h2>Module / Namespace</h2>
+    <h3 class="question">What is a namespace module?</h3>
+    <div class="answer">
+      <div>A reusable business component is usually composed of different types of modules such as <a href="module/view">view module</a>, <a href="module/script">script module</a>, and <a href="module/style">style module</a>. We call a composite module that is composed of several sub-modules a namespace module.</div>
+      <div>A namespace module can contain any type and number of sub-modules, including nested namespace modules.</div>
+      <div>The configuration item of a namespace module has a value of "namespace" for the "type" field.</div>
+      <div>Let's take an example:
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module" src="https://codepen.io/dagger8224/embed/GRQBvmw?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/GRQBvmw">
+          [dagger-demo] namespace module</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+        In this example, we registered a namespace module named "namespace_module". You can create an instance of the namespace by using the path "namespace_module.view" (the path of the view module under the namespace "namespace_module").
+        <div>In the current namespace, we also defined a style module named "scoped_style" with the "scoped" field set to true, which means that this module is only valid for the current namespace.</div>
+      </div>
+      <div>If the name of the view module in the namespace is "view", you can also create an instance by using the namespace path, as shown in the following example:
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module (shortcut module path)" src="https://codepen.io/dagger8224/embed/qBopaLo?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/qBopaLo">
+          [dagger-demo] namespace module (shortcut module path)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
+      </div>
+    </div>
+    <h3 class="question">Namespace module configuration item fields</h3>
+    <div class="answer">In addition to the common configuration item fields of modules, namespace modules also support a boolean type "explicit" field. When "explicit" is false (the default value), the content of sub-modules under the current namespace is not accessible to the outside. You can set "explicit" to true to expose the sub-modules of <a href="module/script">script module</a> and <a href="module/json">json module</a> under the namespace to the outer namespace. Let's take an example:
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] namespace module (explicit)" src="https://codepen.io/dagger8224/embed/RwMxGdE?default-tab=html%2Cresult&editable=true" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/RwMxGdE">
+        [dagger-demo] namespace module (explicit)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
   </template>
 </div>
