--- a/miscellaneous/introduction.html
+++ b/miscellaneous/introduction.html
@@ -3,8 +3,7 @@
   <script type="dagger/modules">
     {
       "view": {
-          "uri": "#view",
-          "style": "style"
+          "uri": "#view"
       },
       "style": "#style"
     }
